--- a/Lab6/Lab6.csproj
+++ b/Lab6/Lab6.csproj
@@ -1,44 +1,48 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
-    <PackageTargetFallback>portable-net45+win8</PackageTargetFallback>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp1.1</TargetFramework>
+		<PackageTargetFallback>portable-net45+win8</PackageTargetFallback>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="wwwroot\js\" />
-    <Folder Include="wwwroot\styles\" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="1.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="1.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.DataAnnotations" Version="1.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="1.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="1.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="1.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.2" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.2" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="1.1.0" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Lab6.Entities\Lab6.Entities.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="wwwroot\js\" />
+		<Folder Include="wwwroot\styles\" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="1.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="1.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.DataAnnotations" Version="1.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="1.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="1.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="1.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.1" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="1.1.2" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.2" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.2" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.2" />
+		<PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.2" />
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.1" />
+		<PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="1.1.0" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1" />
+	</ItemGroup>
+	
+	<ItemGroup>
+		<ProjectReference Include="..\Lab6.Entities\Lab6.Entities.csproj" />
+	</ItemGroup>
 
 </Project>
